; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_guess_mod_percent.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_guess_mod_percent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @status_get_guess_mod_percent(i32* %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @status_get_guess_mod_offset(i32* %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @status_get_guess_mod_count(i32* %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store double 0.000000e+00, double* %2, align 8
  br label %20

13:                                               ; preds = %1
  %14 = load i32, i32* %4, align 4
  %15 = sitofp i32 %14 to double
  %16 = load i32, i32* %5, align 4
  %17 = sitofp i32 %16 to double
  %18 = fdiv double %15, %17
  %19 = fmul double %18, 1.000000e+02
  store double %19, double* %2, align 8
  br label %20

20:                                               ; preds = %13, %12
  %21 = load double, double* %2, align 8
  ret double %21
}

declare dso_local i32 @status_get_guess_mod_offset(i32*) #1

declare dso_local i32 @status_get_guess_mod_count(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
